# turboquant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: benchmark_kv.py  benchmark_results.json  results_qwen2.5-0.5b-instruct.json  results_qwen2.5-3b-instruct.json  results_qwen2.5-7b-instruct.json  results_stablelm-2-1_6b-chat.json
cuda/: setup.py  turboquant_kernel.cu
docs/: ARCHITECTURE.md  README.md  ROADMAP.md
docs/guides/: WORKFLOW.md
docs/marketing/: BLOG-POST-BENCHMARKS.md  PLAN-PORTFOLIO-BLOG.md  README.md  REDDIT-POSTS.md  STRATEGY.md
docs/plans/: ACTIVE-PLAN.md
docs/plans/archive/: PLAN-benchmark-campaign.md  PLAN-turboquant-kv-compression.md
docs/reference/: API.md  CODEBASE-MAP.md
docs/research/: FLOCKRUN-GPU-ANALYSIS.md  INFERENCE-SERVER-RESEARCH.md  KV-CACHE-LANDSCAPE.md  LLAMA-CPP-FEASIBILITY.md  LLAMACPP-PORT-DESIGN.md  SYNTHESIS.md  TURBOQUANT-COMBINATIONS.md  TURBOQUANT-DEEP-DIVE.md
examples/: basic_usage.py
plans/: ACTIVE-PLAN.md
tests/: test_cache.py  test_core.py  test_static_cache.py
turboquant/: __init__.py  cache.py  core.py  static_cache.py
